Fixed horizontal scrollbar bug

--- a/index.css
+++ b/index.css
@@ -2,10 +2,17 @@ body{
     background-color: black;
     color: white;
     margin: 0px;
+    overflow-x: hidden;
 }
 .Heading{
     color: yellow;
     margin: 30px;
+}
+.Content{
+    margin: 35px;
+    max-width: 1200px;
+    font-size: 19px;
+    line-height: 1.5;
 }
 
 .Home {
@@ -17,7 +24,6 @@ body{
   align-items: center;
   text-align: center;
 }
-
 
 .Home-Heading {
   color: yellow;
@@ -62,10 +68,6 @@ body{
 .Why{
     min-height: 100vh;
     width: 100%;
-}
-.Content{
-    margin: 35px;
-    max-width: 1200px;
 }
 
 .Mission {
